first pass at converting smarty to View.php templates.

--- a/app/htdocs/.htaccess
+++ b/app/htdocs/.htaccess
@@ -1,3 +1,5 @@
+ErrorDocument 404 /404.php
+
 RewriteEngine On
 
 # RewriteRule ^root_path/{0,1}$ index.php?namespace=root&controller=etc   [QSA,L]
@@ -8,9 +10,8 @@ RewriteRule ^/{0,1}$ index.php?controller=homepage [QSA,L]
 RewriteRule ^(contact|feed|sources)/{0,1}$ index.php?controller=$1 [QSA,L]
 RewriteRule ^a/{0,1}$ index.php?controller=admin [QSA,L]
 
-RewriteRule ^(about)/{0,1}$ index.php?controller=staticpage&template=about.tpl [QSA,L]
-RewriteRule ^(contact/thankyou.php)$ index.php?controller=staticpage&template=contact_thankyou.tpl [QSA,L]
+RewriteRule ^(about)/{0,1}$ index.php?controller=staticpage&template=about [QSA,L]
+RewriteRule ^(contact/thankyou.php)$ index.php?controller=staticpage&template=contact_thankyou [QSA,L]
+RewriteRule ^(404.php)$ index.php?controller=staticpage&template=404 [QSA,L]
 
 RewriteRule ^ajax/([^/]+)/{0,1}$ index.php?namespace=ajax&controller=$1 [QSA,L]
-
-#ErrorDocument 404 /404.php
