feed info page, activate/deactivate feeds

--- a/app/htdocs/.htaccess
+++ b/app/htdocs/.htaccess
@@ -9,6 +9,9 @@ RewriteRule ^/{0,1}$ index.php?controller=homepage [QSA,L]
 
 RewriteRule ^(contact|feed|sources)/{0,1}$ index.php?controller=$1 [QSA,L]
 RewriteRule ^a/{0,1}$ index.php?controller=admin [QSA,L]
+RewriteRule ^a/feed/{0,1}$ index.php?controller=admin&action=feed [QSA,L]
+RewriteRule ^a/feed/activate{0,1}$ index.php?controller=admin&action=activateFeed [QSA,L]
+RewriteRule ^a/feed/deactivate{0,1}$ index.php?controller=admin&action=deactivateFeed [QSA,L]
 
 RewriteRule ^(about)/{0,1}$ index.php?controller=staticpage&template=about [QSA,L]
 RewriteRule ^(contact/thankyou.php)$ index.php?controller=staticpage&template=contact_thankyou [QSA,L]
